--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -34,6 +34,7 @@ html, body {
 
 #con-head-quote {
     height:100%;
+    width:150px;
     background-color:#550000;
     position:relative;
     float:right;
@@ -55,7 +56,7 @@ html, body {
 
 
 #con-body-nav { /* Side Menu */
-    background-color:purple;
+    background-color:aqua;
     float:left;
     height:100%
 }
@@ -73,11 +74,70 @@ html, body {
 }
 
 #con-body-main-nav{
-    background-color:blue;
+    background-color:yellow;
     height:100px;
 }
 
 #con-body-main-content{
     background-color:#55FF55;
     height:100%;
+}
+
+#main-nav{
+	display:block;
+	width:100%;
+	list-style-type:none;
+	margin:0;
+	padding:0;
+	/* background-color:#dddddd; */
+}
+
+div.horizontal
+{
+width:100%;
+height:100px;
+}
+div.horizontal ul
+{
+list-style-type:none;
+margin:0;
+padding:0;
+}
+div.horizontal li
+{
+float:left;
+}
+div.horizontal a
+{
+display:block;
+width:180px;
+}
+div.horizontal a:link,div.horizontal a:visited
+{
+font-weight:bold;
+color:#FFFFFF;
+background-color:#98bf21;
+text-align:center;
+padding:4px;
+text-decoration:none;
+text-transform:uppercase;
+}
+div.horizontal a:hover,div.horizontal a:active
+{
+background-color:#7A991A;
+}
+
+ul.horizontal a:link,ul.horizontal a:visited
+{
+font-weight:bold;
+color:#FFFFFF;
+background-color:#98bf21;
+text-align:center;
+padding:4px;
+text-decoration:none;
+text-transform:uppercase;
+}
+ul.horizontal a:hover,ul.horizontal a:active
+{
+background-color:#7A991A;
 }
