--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -3,14 +3,14 @@
 }
 
 html, body {
-    background-color:pink;
+/*     background-color:pink; */
     height:100%;
     width:100%;
 }
 
 
 #con-header { /* header container */
-    background-color:#5555FF;
+/*     background-color:#5555FF; */
     padding:0px;
     border:0px;
     width:100%;
@@ -18,7 +18,7 @@ html, body {
 }
 
 #con-head-logo {
-    background-color:#FF0000;
+/*     background-color:#FF0000; */
     position:relative;
     height:100%;
     width:257px;
@@ -27,7 +27,7 @@ html, body {
 }
 
 #con-head-worder {
-    background-color:#AA0000;
+/*     background-color:#AA0000; */
     position:initial;
     height:100%;
 }
@@ -35,7 +35,7 @@ html, body {
 #con-head-quote {
     height:100%;
     width:150px;
-    background-color:#550000;
+/*     background-color:#550000; */
     position:relative;
     float:right;
 }
@@ -50,36 +50,36 @@ html, body {
      width:100%;
      height:100%;
 
-     background-color:yellow;
+/*      background-color:yellow; */
 }
 
 
 
 #con-body-nav { /* Side Menu */
-    background-color:aqua;
+/*     background-color:aqua; */
     float:left;
     height:100%
 }
 
 #con-body-main{
-    background-color:white;
+/*     background-color:white; */
     width:100%;
     height:100%;
 }
 
 #con-body-main-title {
-    background-color:green;
+/*     background-color:green; */
     width:100%;
     height:100px;
 }
 
 #con-body-main-nav{
-    background-color:yellow;
+/*     background-color:yellow; */
     height:100px;
 }
 
 #con-body-main-content{
-    background-color:#55FF55;
+/*     background-color:#55FF55; */
     height:100%;
 }
 
