working login/logout
login is working - still need to test for bad attempts though
whole bunch of html pages have been added. These are sections of the
personal plan. They will be turned into .jsp pages at a later commit so
they can use the template.

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -141,3 +141,32 @@ ul.horizontal a:hover,ul.horizontal a:active
 {
 background-color:#7A991A;
 }
+
+
+
+.fakeLink {
+	cursor: pointer;
+	color: blue;
+	text-decoration:underline;
+}
+
+.error {
+	color: red;
+}
+
+.pp {
+	width:100px;
+	height:100px;
+}
+
+.toggle {
+	cursor: pointer;
+}
+
+.formTemplate {
+	display: none;
+}
+
+.medCon {
+	display: inline;
+}
