--- a/WebContent/partials/head.html
+++ b/WebContent/partials/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	    <title>Document Management System - Layout</title>
+	    <title>Document Management System</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css">
         <script type='text/javascript' src='scripts/jquery.js' ></script>
         <script type='text/javascript' src='scripts/jquery.cookie.js' ></script>
@@ -11,6 +11,7 @@
         	if(document.URL!="http://"+window.location.hostname + ":8080/EndeavourDMS/login.jsp") {
         		checkRole();
         		$(document).ready(function(){
+        			$("#con-head-worder").html("<h2>" + $.cookie('user_id') + "</h2>");
         			$("#con-head-worder").append("<button id='logout'>Log Out</button>");	
         			//click on logout button
         			$("#logout").click(function(){
@@ -19,7 +20,7 @@
         				window.location.replace("http://" + window.location.hostname + ":8080/EndeavourDMS/login.jsp");
         			});
         		});
-        	}		
+        	}
         </script>
 	</head>
 	
