--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -92,27 +92,27 @@ html, body {
 	/* background-color:#dddddd; */
 }
 
-div.horizontal
+div.horizontalNav
 {
 width:100%;
 height:100px;
 }
-div.horizontal ul
+div.horizontalNav ul
 {
 list-style-type:none;
 margin:0;
 padding:0;
 }
-div.horizontal li
+div.horizontalNav li
 {
 float:left;
 }
-div.horizontal a
+div.horizontalNav a
 {
 display:block;
 width:180px;
 }
-div.horizontal a:link,div.horizontal a:visited
+div.horizontalNav a:link,div.horizontalNav a:visited
 {
 font-weight:bold;
 color:#FFFFFF;
@@ -122,12 +122,12 @@ padding:4px;
 text-decoration:none;
 text-transform:uppercase;
 }
-div.horizontal a:hover,div.horizontal a:active
+div.horizontalNav a:hover,div.horizontalNav a:active
 {
 background-color:#7A991A;
 }
 
-ul.horizontal a:link,ul.horizontal a:visited
+ul.horizontalNav a:link,ul.horizontalNav a:visited
 {
 font-weight:bold;
 color:#FFFFFF;
@@ -137,11 +137,10 @@ padding:4px;
 text-decoration:none;
 text-transform:uppercase;
 }
-ul.horizontal a:hover,ul.horizontal a:active
+ul.horizontalNav a:hover,ul.horizontalNav a:active
 {
 background-color:#7A991A;
 }
-
 
 
 .fakeLink {
@@ -169,4 +168,8 @@ background-color:#7A991A;
 
 .medCon {
 	display: inline;
+}
+.hidden {
+	display:none;
+}
 }
