--- a/WebContent/partials/head.html
+++ b/WebContent/partials/head.html
@@ -46,5 +46,5 @@
 				</ul>
             </div>
             <div id="con-body-main">
-            	<div id="con-body-main-nav">
+            	<div id="con-body-main-title"> <h2>
                    
