--- a/WebContent/partials/head.html
+++ b/WebContent/partials/head.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	    <title>Document Management System</title>
-        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <script type='text/javascript' src='scripts/jquery.js' ></script>
         <script type='text/javascript' src='scripts/jquery.cookie.js' ></script>
         <script type='text/javascript' src='scripts/json2.js' ></script>
@@ -28,7 +28,7 @@
         
         
         <div id="con-header">
-            <div id="con-head-logo"> <img src="./images/endeavourLogo.jpg"> </div>
+            <div id="con-head-logo"> <img src="images/endeavourLogo.jpg"> </div>
             <div id="con-head-quote"> <em>"quote"</em> </div>
             <div id="con-head-worder"> <h2>user</h2></div>
 		</div> 
