--- a/WebContent/partials/head.html
+++ b/WebContent/partials/head.html
@@ -12,7 +12,14 @@
         		checkRole();
         		$(document).ready(function(){
         			$("#con-head-worder").html("<h2>" + $.cookie('user_id') + "</h2>");
-        			$("#con-head-worder").append("<button id='logout'>Log Out</button>");	
+        			$("#con-head-worder").append("<button id='logout'>Log Out</button>");
+        			//add elements to page based off role
+        			//support worker
+        			if($.cookie('user_role')=="sw") {
+        				$("#main-nav").append("<li><a href='createuser.jsp'>Create User</a></li>");
+        			}
+        			
+        			
         			//click on logout button
         			$("#logout").click(function(){
         				$.removeCookie('user_id');
