--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -56,9 +56,10 @@ html, body {
 
 
 #con-body-nav { /* Side Menu */
-/*     background-color:aqua; */
+    background-color:aqua; 
     float:left;
-    height:100%
+    height:100%;
+    min-height: 100%;
 }
 
 #con-body-main{
