Personal Plan 99% done
just have to sort out the glitches

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -179,5 +179,14 @@ background-color:#7A991A;
 }
 
 .bold {
-	font-style:bold;
+	font-weight:bold;
+}
+
+.title {
+	font-weight:bold;
+	font-size: 20pt;
+}
+
+.inline {
+	display: inline-block;
 }
