Added jspdf library and some of the report scripts
-Added jspdf library
-Added filesaver library
-Added blob library
-Added pdf builder in reports page
-Added client details to pdf

--- a/WebContent/partials/head.html
+++ b/WebContent/partials/head.html
@@ -7,6 +7,11 @@
         <script type='text/javascript' src='scripts/jquery.cookie.js' ></script>
         <script type='text/javascript' src='scripts/json2.js' ></script>
         <script type='text/javascript' src='scripts/global-functions.js' ></script>
+        <!--  JS PDF Scripts -->
+        <script type='text/javascript' src='scripts/jspdf/libs/Blob/BlobBuilder.js'></script>
+        <script type='text/javascript' src='scripts/jspdf/libs/FileSaver/FileSaver.js'></script>
+        <script type='text/javascript' src='scripts/jspdf/jspdf.js' ></script>
+        
         <script type='text/javascript'>
         	if(document.URL!="http://"+window.location.hostname + ":8080/EndeavourDMS/login.jsp") {
         		checkRole();
