pp data checking 50% done
logout works
working on risk assessment (33% done)

--- a/WebContent/partials/head.html
+++ b/WebContent/partials/head.html
@@ -65,12 +65,12 @@
             <div id="con-body-nav">
              	<h2>Main Page<br />Navigation Menu</h2> 
                 <ul id="main-nav">
-				<li><a href="index.jsp">Home</a></li>
-				<li><a href="personalplan.jsp">Personal Plan</a></li>
-				<li><a href="riskassessment.jsp">Risk Assessment</a></li>
-				<li><a href="reports.jsp">Reports</a></li>
-				<li><a href="planmeeting.jsp">Plan Meeting</a></li>
-				<li><a href="goals.jsp">Goals</a></li>
+					<li class='mainNavigation'><a href="index.jsp">Home</a></li>
+					<li class='mainNavigation'><a href="personalplan.jsp">Personal Plan</a></li>
+					<li class='mainNavigation'><a href="riskassessment.jsp">Risk Assessment</a></li>
+					<li class='mainNavigation'><a href="reports.jsp">Reports</a></li>
+					<li class='mainNavigation'><a href="planmeeting.jsp">Plan Meeting</a></li>
+					<li class='mainNavigation'><a href="goals.jsp">Goals</a></li>
 				</ul>
             </div>
             <div id="con-body-main">
