--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -49,6 +49,7 @@ html, body {
 
      width:100%;
      height:100%;
+     overflow: auto;
 
 /*      background-color:yellow; */
 }
@@ -60,12 +61,14 @@ html, body {
     float:left;
     height:100%;
     min-height: 100%;
+    overflow: auto;
 }
 
 #con-body-main{
 /*     background-color:white; */
     width:100%;
     height:100%;
+    min-height:100%;
 }
 
 #con-body-main-title {
@@ -189,4 +192,13 @@ background-color:#7A991A;
 
 .inline {
 	display: inline-block;
+}
+
+.instructions {
+	color: rgb(248,152,40);
+	margin-bottom:25px;
+}
+
+.nothingFound {
+	color: red;
 }
