--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -59,14 +59,13 @@ html, body {
 #con-body-nav { /* Side Menu */
     background-color:aqua; 
     float:left;
-    height:100%;
     min-height: 100%;
     overflow: auto;
 }
 
 #con-body-main{
 /*     background-color:white; */
-    width:100%;
+    float:left;
     height:100%;
     min-height:100%;
 }
@@ -74,7 +73,7 @@ html, body {
 #con-body-main-title {
 /*     background-color:green; */
 /*     width:100%; */
-    height:100px;
+    height:30px;
 }
 
 #con-body-main-nav{
@@ -84,7 +83,9 @@ html, body {
 
 #con-body-main-content{
 /*     background-color:#55FF55; */
-    height:100%;
+    height:80%;
+    margin-left:10px;
+    overflow:auto;
 }
 
 #main-nav{
@@ -100,21 +101,26 @@ div.horizontalNav
 {
 width:100%;
 height:100px;
+
 }
 div.horizontalNav ul
 {
 list-style-type:none;
 margin:0;
 padding:0;
+width:100%;
+height:100px;
 }
 div.horizontalNav li
 {
 float:left;
+width:auto;
 }
 div.horizontalNav a
 {
 display:block;
 width:180px;
+height:50px;
 }
 div.horizontalNav a:link,div.horizontalNav a:visited
 {
@@ -125,6 +131,7 @@ text-align:center;
 padding:4px;
 text-decoration:none;
 text-transform:uppercase;
+margin-top: auto;
 }
 div.horizontalNav a:hover,div.horizontalNav a:active
 {
@@ -185,9 +192,10 @@ background-color:#7A991A;
 	font-weight:bold;
 }
 
-.title {
+.riskTitle {
 	font-weight:bold;
-	font-size: 20pt;
+	font-size: 16pt;
+	margin-right:10px;
 }
 
 .inline {
