--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -2,18 +2,24 @@
     margin:0px;
 }
 
-html, body {
+html {
 /*     background-color:pink; */
     height:100%;
     width:100%;
 }
 
+body {
+	height:100%;
+    width:1000px;
+	margin-left: auto;
+  	margin-right: auto;
+}
 
 #con-header { /* header container */
 /*     background-color:#5555FF; */
     padding:0px;
     border:0px;
-    width:100%;
+    width:1000px;
     height:95px;
 }
 
@@ -34,7 +40,7 @@ html, body {
 
 #con-head-quote {
     height:100%;
-    width:150px;
+    width:400px;
 /*     background-color:#550000; */
     position:relative;
     float:right;
@@ -47,7 +53,7 @@ html, body {
      margin:0px;
      padding:0px;
 
-     width:100%;
+     width:999px;
      height:100%;
      overflow: auto;
 
@@ -61,13 +67,17 @@ html, body {
     float:left;
     min-height: 100%;
     overflow: auto;
+    width:130px;
+    display:inline-block;
 }
 
 #con-body-main{
 /*     background-color:white; */
-    float:left;
+    float:right;
     height:100%;
     min-height:100%;
+    width:850px;
+    display:inline-block;
 }
 
 #con-body-main-title {
@@ -83,9 +93,9 @@ html, body {
 
 #con-body-main-content{
 /*     background-color:#55FF55; */
-    height:80%;
     margin-left:10px;
     overflow:auto;
+    margin-top:20px;
 }
 
 #main-nav{
@@ -94,6 +104,7 @@ html, body {
 	list-style-type:none;
 	margin:0;
 	padding:0;
+	font-size:16pt;
 	/* background-color:#dddddd; */
 }
 
@@ -119,7 +130,7 @@ width:auto;
 div.horizontalNav a
 {
 display:block;
-width:180px;
+width:150px;
 height:50px;
 }
 div.horizontalNav a:link,div.horizontalNav a:visited
