--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -6,6 +6,19 @@ html {
 /*     background-color:pink; */
     height:100%;
     width:100%;
+    background-image: linear-gradient(bottom, rgb(224,216,203) 28%, rgb(252,252,252) 64%);
+	background-image: -o-linear-gradient(bottom, rgb(224,216,203) 28%, rgb(252,252,252) 64%);
+	background-image: -moz-linear-gradient(bottom, rgb(224,216,203) 28%, rgb(252,252,252) 64%);
+	background-image: -webkit-linear-gradient(bottom, rgb(224,216,203) 28%, rgb(252,252,252) 64%);
+	background-image: -ms-linear-gradient(bottom, rgb(224,216,203) 28%, rgb(252,252,252) 64%);
+	
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.28, rgb(224,216,203)),
+		color-stop(0.64, rgb(252,252,252))
+	);
 }
 
 body {
@@ -54,21 +67,43 @@ body {
      padding:0px;
 
      width:999px;
-     height:100%;
-     overflow: auto;
+     height:90%;
+     overflow: hidden;
 
 /*      background-color:yellow; */
 }
 
 
 
-#con-body-nav { /* Side Menu */
-    background-color:aqua; 
+#con-body-nav { /* Side Menu */ 
     float:left;
     min-height: 100%;
     overflow: auto;
     width:130px;
     display:inline-block;
+    color: #FFFFFF;
+    
+    border: 0px solid;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+    
+    
+    background-image: linear-gradient(left , rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+	background-image: -o-linear-gradient(left , rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+	background-image: -moz-linear-gradient(left , rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+	background-image: -webkit-linear-gradient(left , rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+	background-image: -ms-linear-gradient(left , rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+	
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		right bottom,
+		color-stop(0.15, rgb(153,153,153)),
+		color-stop(0.71, rgb(106,107,107))
+	);
+    
+    
+    
 }
 
 #con-body-main{
@@ -92,10 +127,11 @@ body {
 }
 
 #con-body-main-content{
-/*     background-color:#55FF55; */
     margin-left:10px;
-    overflow:auto;
+    overflow-y:auto;
+    overflow-x: hidden;
     margin-top:20px;
+    height:800px;
 }
 
 #main-nav{
@@ -105,14 +141,18 @@ body {
 	margin:0;
 	padding:0;
 	font-size:16pt;
+	font-family: "Comic Sans MS";
 	/* background-color:#dddddd; */
+}
+
+#main-nav li {
+	margin-bottom:15px;
 }
 
 div.horizontalNav
 {
 width:100%;
 height:100px;
-
 }
 div.horizontalNav ul
 {
@@ -121,6 +161,8 @@ margin:0;
 padding:0;
 width:100%;
 height:100px;
+
+
 }
 div.horizontalNav li
 {
@@ -132,37 +174,125 @@ div.horizontalNav a
 display:block;
 width:150px;
 height:50px;
+margin-left:3px;
+margin-top:3px;
 }
+
+.navTopLeft {
+	border: 0px solid;
+	border-top-left-radius: 20px;
+}
+
+.navTopRight {
+	border: 0px solid;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+}
+
+
+
+.navBottomLeft {
+	border: 0px solid;
+	border-bottom-left-radius: 20px;
+}
+
+.navBottomRight {
+	border: 0px solid;
+	border-bottom-right-radius: 20px;
+}
+
+
+
 div.horizontalNav a:link,div.horizontalNav a:visited
 {
 font-weight:bold;
 color:#FFFFFF;
-background-color:#98bf21;
 text-align:center;
 padding:4px;
 text-decoration:none;
-text-transform:uppercase;
 margin-top: auto;
+font-family: "Helvetica";
+
+
+background-image: linear-gradient(top, rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+background-image: -o-linear-gradient(top, rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+background-image: -moz-linear-gradient(top, rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+background-image: -webkit-linear-gradient(top, rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+background-image: -ms-linear-gradient(top, rgb(153,153,153) 15%, rgb(106,107,107) 71%);
+
+background-image: -webkit-gradient(
+	linear,
+	right top,
+	right bottom,
+	color-stop(0.15, rgb(153,153,153)),
+	color-stop(0.71, rgb(106,107,107))
+);
 }
 div.horizontalNav a:hover,div.horizontalNav a:active
 {
-background-color:#7A991A;
+background-image: linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -o-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -moz-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -webkit-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -ms-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0.1, rgb(84,34,40)),
+	color-stop(0.55, rgb(255,143,5))
+);
 }
 
 ul.horizontalNav a:link,ul.horizontalNav a:visited
 {
 font-weight:bold;
 color:#FFFFFF;
-background-color:#98bf21;
+
 text-align:center;
 padding:4px;
 text-decoration:none;
-text-transform:uppercase;
+
+background-image: linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -o-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -moz-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -webkit-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -ms-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0.1, rgb(84,34,40)),
+	color-stop(0.55, rgb(255,143,5))
+);
+
 }
 ul.horizontalNav a:hover,ul.horizontalNav a:active
 {
-background-color:#7A991A;
+background-image: linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -o-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -moz-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -webkit-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+background-image: -ms-linear-gradient(bottom, rgb(84,34,40) 10%, rgb(255,143,5) 55%);
+
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0.1, rgb(84,34,40)),
+	color-stop(0.55, rgb(255,143,5))
+);
 }
+
+a:visited {
+	color:#FFFFFF;
+}
+
+
+
+
 
 
 .fakeLink {
