--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -141,7 +141,7 @@ body {
 	margin:0;
 	padding:0;
 	font-size:16pt;
-	font-family: "Comic Sans MS";
+	font-family: "Helvetica";
 	/* background-color:#dddddd; */
 }
 
