--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -19,6 +19,7 @@ html {
 		color-stop(0.28, rgb(224,216,203)),
 		color-stop(0.64, rgb(252,252,252))
 	);
+	overflow:auto;
 }
 
 body {
@@ -26,6 +27,7 @@ body {
     width:1000px;
 	margin-left: auto;
   	margin-right: auto;
+  	padding-top:10px;
 }
 
 #con-header { /* header container */
@@ -102,7 +104,7 @@ body {
 		color-stop(0.71, rgb(106,107,107))
 	);
     
-    
+    overflow:hidden;
     
 }
 
@@ -113,6 +115,7 @@ body {
     min-height:100%;
     width:850px;
     display:inline-block;
+    overflow:auto;
 }
 
 #con-body-main-title {
@@ -132,6 +135,7 @@ body {
     overflow-x: hidden;
     margin-top:20px;
     height:800px;
+    overflow:auto;
 }
 
 #main-nav{
@@ -140,9 +144,9 @@ body {
 	list-style-type:none;
 	margin:0;
 	padding:0;
-	font-size:16pt;
+	font-size:14pt;
 	font-family: "Helvetica";
-	/* background-color:#dddddd; */
+	margin-left:5px;
 }
 
 #main-nav li {
