working on client PP

--- a/WebContent/partials/head.html
+++ b/WebContent/partials/head.html
@@ -20,7 +20,7 @@
         		$(document).ready(function(){
         			$("#con-head-worder").html("<h2>" + $.cookie('user_id') + "</h2>");
         			$("#con-head-worder").append("<button id='logout'>Log Out</button>");
-        			
+        			$("#con-head-worder").append("&nbsp;&nbsp;&nbsp;<a href='resetpassword.jsp' style='display:inline; color:black;'>reset password</a>");
         			
         			
         			
