front end bug fixes

--- a/WebContent/partials/head.html
+++ b/WebContent/partials/head.html
@@ -18,7 +18,20 @@
         		
         		//wait
         		$(document).ready(function(){
-        			$("#con-head-worder").html("<h2>" + $.cookie('user_id') + "</h2>");
+        			//pull the name
+        			$.ajax({
+        				url: "./rest/user/" + $.cookie('user_id') + "/" + $.cookie('auth_token') + "/" + $.cookie('user_id'),
+        				type:"get",
+        				contentType: "application/json",
+        				success: function(d) {		
+        					$("#con-head-worder").html("<h2>" + d.rName + "</h2>");
+        				},
+        				error: function(xhr) {
+        					// do something to handle error
+        					
+        				}
+        			});
+        			
         			$("#con-head-worder").append("<button id='logout'>Log Out</button>");
         			$("#con-head-worder").append("&nbsp;&nbsp;&nbsp;<a href='resetpassword.jsp' style='display:inline; color:black;'>reset password</a>");
         			
